--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.30.3",
     "axios": "^0.21.1",
     "next": "^11.0.1",
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "prisma": "^2.30.3"
   }
 }
